--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "overidify"
     ]
   },
+  "aliasify": "config/extensions.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/jhugman/turo-app.git"
@@ -49,7 +50,11 @@
     "grunt-contrib-clean": "~0.5.0",
     "overidify": "jhugman/overidify",
     "kirin-build": "~0.1.0",
-    "build-facets": "git://github.com/jhugman/build-facets",
-    "kirin-idl": "git://github.com/jhugman/kirin-idl"
+    "build-facets": "jhugman/build-facets",
+    "kirin-idl": "jhugman/kirin-idl",
+    "macro-aliasify": "jhugman/macro-aliasify"
+  },
+  "optionalDependencies": {
+    "kirin": "jhugman/kirin"
   }
 }
