--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "homepage": "https://github.com/jhugman/turo-app",
   "dependencies": {
     "turo": "jhugman/turo",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "overidify": "jhugman/overidify"
   },
   "devDependencies": {
     "browserify": "~3.14.1",
@@ -48,8 +49,6 @@
     "brfs": "0.0.8",
     "grunt-manifest": "~0.4.0",
     "grunt-contrib-clean": "~0.5.0",
-    "overidify": "jhugman/overidify",
-    "kirin-build": "~0.1.0",
     "build-facets": "jhugman/build-facets",
     "kirin-idl": "jhugman/kirin-idl",
     "macro-aliasify": "jhugman/macro-aliasify"
