--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-node-tap": "0.1.44",
     "lodash": "~2.4.1",
-    "brfs": "0.0.8",
+    "brfs": "~1.2.0",
     "grunt-manifest": "~0.4.0",
     "grunt-contrib-clean": "~0.5.0",
     "build-facets": "jhugman/build-facets",
