--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "turo": "jhugman/turo",
     "underscore": "~1.5.2",
-    "overidify": "jhugman/overidify"
+    "overidify": "jhugman/overidify",
+    "brfs": "~1.2.0"
   },
   "devDependencies": {
     "browserify": "~3.14.1",
@@ -46,7 +47,6 @@
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-node-tap": "0.1.44",
     "lodash": "~2.4.1",
-    "brfs": "~1.2.0",
     "grunt-manifest": "~0.4.0",
     "grunt-contrib-clean": "~0.5.0",
     "build-facets": "jhugman/build-facets",
