--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   "dependencies": {
     "turo": "jhugman/turo",
     "underscore": "~1.5.2",
-    "overidify": "jhugman/overidify",
-    "brfs": "~1.2.0"
+    "overidify": "jhugman/overidify"
   },
   "devDependencies": {
     "browserify": "~3.14.1",
@@ -47,6 +46,7 @@
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-node-tap": "0.1.44",
     "lodash": "~2.4.1",
+    "brfs": "0.0.8",
     "grunt-manifest": "~0.4.0",
     "grunt-contrib-clean": "~0.5.0",
     "build-facets": "jhugman/build-facets",
